Google Analytics and update template

--- a/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
+++ b/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
@@ -5,6 +5,7 @@ author: kintiru
 categories: [Korean, Physics]   # [TOP_CATEGORIE, SUB_CATEGORIE]
 tags: [Korean, AP Physics 2]     # TAG names should always be lowercase
 math: true
+mermaid: true
 ---
 # 목차
 
