Updated tages and new post

--- a/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
+++ b/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
@@ -3,7 +3,7 @@ title: 열역학 압력 부피 그래프 (PV 그래프)
 date: 2022-12-21 13:30:00 +0900
 author: kintiru
 categories: [Korean, Physics]   # [TOP_CATEGORIE, SUB_CATEGORIE]
-tags: [Korean, AP Physics 2]     # TAG names should always be lowercase
+tags: [Korean, Physics, AP Physics 2, Thermodynamics]     # TAG names should always be lowercase
 math: true
 mermaid: true
 ---
