update template and posts captions & code format

--- a/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
+++ b/_posts/ko/physics/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
@@ -46,6 +46,7 @@ $$
 이러한 이상기체 상태방정식 (Ideal Gas Law)에서 기체분자의 수는 고정이라고 했을 때, T에 대한 등위선을 그리게 되면 각 T마다 nRT가 상수가 되어 PV가 반비례 관계가 되는 것을 볼 수 있다. 
 
 ![온도에 대한 등위선 예](/assets/img/2022/12/pvgraph/image.png)
+_온도에 대한 등위선 예_
 
 이러한 선을 이 글에서는 등온선이라고 하겠다.
 
@@ -91,6 +92,7 @@ $$
 등온과정은 기체의 온도가 변하지 않는 과정이다.
 
 ![등온과정 예](/assets/img/2022/12/pvgraph/image-1.png)
+_등온과정 예_
 
 PV 그래프에서는 등온선을 따라 이동하는 과정이 등온과정이다.
 
@@ -114,6 +116,7 @@ $$
 등적과정은 기체의 부피가 변하지 않는 과정이다.
 
 ![등적과정 예](/assets/img/2022/12/pvgraph/image-3.png)
+_등적과정 예_
 
 위 그림에서 A에서 B의 과정 혹은 그 반대가 등적과정의 예시이다.
 
@@ -147,6 +150,7 @@ $$
 등압과정은 기체의 압력이 변하지 않는 과정이다.
 
 ![등압과정 예](/assets/img/2022/12/pvgraph/image-2.png)
+_등압과정 예_
 
 이 경우, 다른 정보가 추가로 주어지지 않는 이상 우리가 아는 것은 오직 기체가 한 일 뿐이다.
 
