changed LaTeX env to display tag

--- a/_posts/ko/physics/AP Physics 2/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
+++ b/_posts/ko/physics/AP Physics 2/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
@@ -171,10 +171,10 @@ $$
 PV 그래프에서 어떠한 움직임 과정이 있었다면, 그 움직임 밑의 넓이는 기체에 가해지거나 기체가 한 일이다.
 
 $$
-\begin{aligned} 
+\begin{align} 
 W & = Fd = PAd \left(d = \frac{ \Delta V}{A}\right) \tag{10} \\ 
 & = P \bcancel A \frac{ \Delta V}{ \bcancel A} = P \Delta V \tag{11} 
-\end{aligned}
+\end{align}
 $$
 
 이 때, 움직임의 방향은 중요하다. 
