--- a/_posts/ko/physics/AP Physics 2/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
+++ b/_posts/ko/physics/AP Physics 2/2022-12-21-열역학 압력 부피 그래프 (PV 그래프).md
@@ -34,11 +34,11 @@ PV그래프는 기본적으로 P(압력), V(부피), T(온도) 세 변수로 그
 다른 변수로 등위선을 그리면 부피 온도 그래프 혹은 압력 온도 그래프를 그릴 수 있다.
 
 $$
-\begin{gathered}
-PV=Nk_bT \tag{1} \\
+\begin{gather}
+PV=Nk_bT \\
 \text{혹은} \\
 PV=nRT
-\end{gathered}
+\end{gather}
 $$
 
 이러한 이상기체 상태방정식 (Ideal Gas Law)에서 기체분자의 수는 고정이라고 했을 때, T에 대한 등위선을 그리게 되면 각 T마다 nRT가 상수가 되어 PV가 반비례 관계가 되는 것을 볼 수 있다. 
